# mediacenter

./: Cargo.toml  README.md  index.html
cec-mouse/: README.md  move_mouse.py  requirements.txt
frontend/: Cargo.toml
frontend/src/: main.rs
frontend/static/src/: index.js
frontend/templates/: index.html
src/: main.rs
static/src/: index.js
templates/: index.html
