[package]
name = "mediacenter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0"
actix-web = "4"
actix-web-lab = "0"
env_logger = "0"
log = "0"
serde = { version = "1", features = ["derive"] }
tera = "1.8"
