[package]
name = "mediacenter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0"
awc ="3"
actix-web = "4"
actix-web-lab = "0"
env_logger = "0"
strum = "0"
strum_macros = "0"
log = "0"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
tera = "1"
clap = { version = "4", features = ["derive"] }
